--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav>
 
 <!---Nav logo strat--->
-        <label class="logo"><img src="./assets/images/Logo-1.png" alt=""></label>
+        <label class="logo"><img src="assets/images/Logo-1.png" alt=""></label>
 <!---Nav logo end--->
 
 <!---Nav List--->
@@ -96,7 +96,7 @@
                     <div class="card text-center" >
                         <div class="card-body">
                             <div class="circle">
-                                <img src="/assets/images/frames/Frame-1.png" width="100" height="100">
+                                <img src="assets/images/frames/Frame-1.png" width="100" height="100">
                                 <p>
                                     Quickly identify and<br>target new markets
                                 </p>
@@ -108,7 +108,7 @@
                     <div class="card text-center" >
                         <div class="card-body">
                             <div class="circle">
-                                <img src="/assets/images/frames/Frame-2.png" width="100" height="100">
+                                <img src="assets/images/frames/Frame-2.png" width="100" height="100">
                                 <p>
                                     Onboard customers<br>100x faster
                                 </p>
@@ -120,7 +120,7 @@
                     <div class="card text-center" >
                         <div class="card-body">
                             <div class="circle">
-                                <img src="/assets/images/frames/Frame-3.png" width="100" height="100">
+                                <img src="assets/images/frames/Frame-3.png" width="100" height="100">
                                 <p>
                                     Migrate complex<br>technologies to cloud faster
                                 </p>
@@ -132,7 +132,7 @@
                     <div class="card text-center" >
                         <div class="card-body">
                             <div class="circle">
-                                <img src="/assets/images/frames/Frame-4.png" width="100" height="100">
+                                <img src="assets/images/frames/Frame-4.png" width="100" height="100">
                                 <p>
                                     Optimize ROI with new<br>market expansion
                                 </p>
@@ -144,7 +144,7 @@
                     <div class="card text-center" >
                         <div class="card-body">
                             <div class="circle">
-                                <img src="/assets/images/frames/Frame-5.png" width="100" height="100">
+                                <img src="assets/images/frames/Frame-5.png" width="100" height="100">
                                 <p>
                                     Reduce operations<br>costs by up to 70%
                                 </p>
@@ -156,7 +156,7 @@
                     <div class="card text-center" >
                         <div class="card-body">
                             <div class="circle">
-                                <img src="/assets/images/frames/Frame-6.png" width="100" height="100">
+                                <img src="assets/images/frames/Frame-6.png" width="100" height="100">
                                 <p>
                                     Excellence delivered<br>on-time and on-budget
                                 </p>
@@ -168,7 +168,7 @@
         </div>
         
         <div class="pic-22">
-            <img src="/assets/images/Bottom Curve-1-1.png">    
+            <img src="assets/images/Bottom Curve-1-1.png">    
         </div>
 
    </section >
@@ -177,17 +177,17 @@
         <div class="container">
             <h2 class="solution-p3">A trusted partner to some of the world’s most innovative broadband and technology companies</h2>
             <section class="logo-area slider">
-                <div class="slide"><img src="/assets/images/partner logo/logo-1.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-2.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-3.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-4.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-5.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-6.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-7.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-8.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-9.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-10.png" alt=""></div>
-                <div class="slide"><img src="/assets/images/partner logo/logo-11.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-1.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-2.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-3.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-4.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-5.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-6.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-7.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-8.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-9.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-10.png" alt=""></div>
+                <div class="slide"><img src="assets/images/partner logo/logo-11.png" alt=""></div>
             </section>
             
         </div>
@@ -209,7 +209,7 @@
         <div class="col-md-4 ">
             <div class="blog-card">
                 <div class="blog-image">
-                    <img src="/assets/images/blog/image-1.jpg" alt="" class="img-fluid" >
+                    <img src="assets/images/blog/image-1.jpg" alt="" class="img-fluid" >
                 </div>
                 <div class="blog-content">
                     <h3>Final Rules - New Opportunities for Broadband Expansion</h3>
@@ -220,7 +220,7 @@
         <div class="col-md-4 ">
             <div class="blog-card">
                 <div class="blog-image">
-                    <img src="/assets/images/blog/image-2.jpg" alt="" class="img-fluid" >
+                    <img src="assets/images/blog/image-2.jpg" alt="" class="img-fluid" >
                 </div>
                 <div class="blog-content">
                     <h3>VCTI Launches New Identity</h3>
@@ -231,7 +231,7 @@
         <div class="col-md-4 ">
             <div class="blog-card">
                 <div class="blog-image">
-                    <img src="/assets/images/blog/image-3.jpg" alt="" class="img-fluid" >
+                    <img src="assets/images/blog/image-3.jpg" alt="" class="img-fluid" >
                 </div>
                 <div class="blog-content">
                     <h3>Why Now versus Later Matters for Broadband Expansion</h3>
@@ -256,7 +256,7 @@
             <div class="content_footer">
                 <div class="profile">
                     <div class="logo_area">
-                        <img src="/assets/images/Logo-1.png" alt="">
+                        <img src="assets/images/Logo-1.png" alt="">
                     </div>
                     <div class="desc_area">
                         <p>Solutions that accelerate broadband expansion, operations & innovation for broadband providers and technology companies.</p>
