--- a/index.html
+++ b/index.html
@@ -204,40 +204,40 @@
    <section class="blogs p-5 "  >
 
         <h1 class="blog-head1">Recent blog posts</h1>
-        <div class="blog-container">
+        <div class="blog-container row">
 
-        <div class="col-md-4 ">
-            <div class="blog-card">
-                <div class="blog-image">
-                    <img src="assets/images/blog/image-1.jpg" alt="" class="img-fluid" >
-                </div>
-                <div class="blog-content">
-                    <h3>Final Rules - New Opportunities for Broadband Expansion</h3>
+            <div class="col-md-4 col-sm-12">
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="assets/images/blog/image-1.jpg" alt="" class="img-fluid" >
+                    </div>
+                    <div class="blog-content">
+                        <h3>Final Rules - New Opportunities for Broadband Expansion</h3>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-md-4 ">
-            <div class="blog-card">
-                <div class="blog-image">
-                    <img src="assets/images/blog/image-2.jpg" alt="" class="img-fluid" >
-                </div>
-                <div class="blog-content">
-                    <h3>VCTI Launches New Identity</h3>
+            <div class="col-md-4 col-sm-12">
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="assets/images/blog/image-2.jpg" alt="" class="img-fluid" >
+                    </div>
+                    <div class="blog-content">
+                        <h3>VCTI Launches New Identity</h3>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-md-4 ">
-            <div class="blog-card">
-                <div class="blog-image">
-                    <img src="assets/images/blog/image-3.jpg" alt="" class="img-fluid" >
-                </div>
-                <div class="blog-content">
-                    <h3>Why Now versus Later Matters for Broadband Expansion</h3>
+            <div class="col-md-4 col-sm-12">
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="assets/images/blog/image-3.jpg" alt="" class="img-fluid" >
+                    </div>
+                    <div class="blog-content">
+                        <h3>Why Now versus Later Matters for Broadband Expansion</h3>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
    </section>
 
