--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </ul>
 
 <!---Navigator Icon--->
-          <label class="nav-icon">
+          <label for="check" class="nav-icon">
             <i class="fas fa-bars"></i>
           </label>
     
