--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!--Second Image html starts here-->
 
     <div class="second-image">
-        <img src="/assets/images/Top-Curve-3.png" alt="">
+        <img src="/assets/images/Top-Curve-3.png" alt="" class="img-fluid">
     </div>
 
     <div class="solutions">
@@ -88,7 +88,7 @@
     </div>
         
     </header>
-
+<!--6 cards code-->
    <section class="service py-5">
         <div class="container py-3">
             <div class="row pb-3" >
@@ -277,26 +277,23 @@
                         <li><a href="#"></a>+1 (732) 981-0611</li>
                         <li><a href="#"></a>info@vcti.io</li>
 
-                        <li class="service">India</li>
+                        <li class="service_name" >India</li>
                         <li><a href="#"></a>+91 80 40375300</li>
                         <li><a href="#"></a>info@vcti.io</li>
                     </ul>
                 </div>
             </div>
+
             <hr style="color: grey;">
-            <div class="footer_bottom" style="color: white;">
-                <div class="footer_botton_content">
-                    <div class="footer_copyright_content">
-                        <div class="copy_rights">
-                            <i class='bx bx-copyright' ></i>
-                            <span>2022  VCTI. All rights reserved || Privacy & Terms of Use</span>
-                        </div>
-                        <div class="social_media">
-                            <a href="#"><i class='bx bxl-linkedin'></i></a>
-                            <a href="#"><i class='bx bxl-twitter' ></i></a>
-                        </div>
-                    </div>
-                    
+
+            <div class="footer_bottom" >
+                <div class="footer_bottom_content">
+                    <i class='bx bx-copyright' ></i>
+                    <span>2022  VCTI. All rights reserved || Privacy & Terms of Use</span>   
+                </div>
+                <div class="social_media">
+                        <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        <a href="#"><i class='bx bxl-twitter' ></i></a>
                 </div>
             </div>
         </div>
